# bevy-Demo-Spirit-Realm

./: .gitignore  Cargo.toml  README.md  TODO  error_out.txt  项目背景.md
Democode/: Array Texture-Demo.md  Array Texture-wgsl.md
changelog/: 2026-05-05.md  2026-05-08-air-chunk-skip.md  2026-5-5-CHANGELOG.md
docs/: ComputeShader与Instancing搭配方案.md  GPU噪声迁移方案.md  Greedy-Meshing实现记录.md  LOD系统设计文档.md  Phase1-SuperChunk合批方案.md  Phase2-GPU驱动渲染管线实现方案.md  Phase完整规划.md  PlanB实施方案.md  Voxy借鉴优化方案.md  buffer_overflow_fix.md  chunk_rendering_fix.md  chunk_rendering_fix_v2.md  index.md  phase2_final_summary.md  phase2b_implementation_status.md  phase2c_3_render_command_summary.md  plan-b-implementation.md  texture-implementation.md  优化建议总结.md  体素空间管理SVO方案.md  体素管理方案.md  关于Bevy实现GPU面剔除方案.md  关于LOD系统设计文档的评价.md  动态Atlas材质包系统.md  动态近景与静态远景区分方案.md  多噪声层地形生成方案.md  开发路线决策与分析.md  文档目录.md  架构总纲.md  虚拟几何vsComputeShader对比分析.md
examples/: nohash.rs  stdhash.rs  世界坐标转换.rs
models/: dirt.gltf  grass.gltf  stone.gltf
oldFile/: main copy.rs  main.rs  posinfo_plugin.rs
plans/: Phase1-SuperChunk合批方案.md  Phase2-StepA-ComputeShader面剔除实现方案.md  TextureArray-GreedyMesh-迁移方案.md  Voxy借鉴优化方案.md  face-culling-optimization-plan.md  优化建议总结.md
src/: 1main.rs  async_mesh.rs  atlas.rs  block_interaction.rs  camera.rs  chunk.rs  chunk.rs.bak  chunk_changes.rs  chunk_dirty.rs  chunk_manager.rs  chunk_wire_frame.rs  cube.rs  fps_overlay.rs  gpu_meshing.rs  greedy_mesh.rs  hud.rs  input.rs  lighting.rs  lod.rs  main copy.rs  main.rs  perf_logger.rs  posinfo_plugin.rs  raycast.rs  resource_pack.rs  tree_gen.rs  (+2 more)
(+51 files in other folders)
