[package]
name = "bevygame1"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = [
  "dynamic_linking",
  "bevy_dev_tools",
  "shader_format_spirv",
]}
bevy_flycam = "*"
fastnoise-lite = "1.1.1"
bevy-inspector-egui = "0.27.0"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
